# IsaacLab-Quadbot-extension

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  setup_vscode.py
exts/omni.isaac.lab_quadruped_tasks/: extension.toml
exts/omni.isaac.lab_quadruped_tasks/omni/isaac/lab_quadruped_tasks/: __init__.py  quadruped_env_cfg.py
exts/omni.isaac.lab_quadruped_tasks/omni/isaac/lab_quadruped_tasks/mdp/: __init__.py  observations.py  rewards.py
exts/omni.isaac.lab_quadruped_tasks/omni/isaac/lab_quadruped_tasks/unitree_go2/: __init__.py  go2_env_cfg.py
exts/omni.isaac.lab_quadruped_tasks/omni/isaac/lab_quadruped_tasks/unitree_go2/agents/: __init__.py  rsl_rl_cfg.py
scripts/rsl_rl/: play.py  train.py
