[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab-quadbot-extension"
version = "0.1.0"
description = "Quadruped tasks extension for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
  "flake8>=6.1.0",
  "black>=24.0",
  "isort>=5.12.0",
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quadbot*"]